fixed exit overlay, not visible

--- a/docs/css/engineering-portfolio.css
+++ b/docs/css/engineering-portfolio.css
@@ -38,18 +38,20 @@
     bottom: 0;
     left: 50%;
     width: 100%;
-    height: 100%;
+    height: auto;
+    visibility: hidden;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    z-index: 1000; /* Ensure it's on top */
+    z-index: 1001; /* Ensure it's on top */
     display: flex;
     align-items: flex-end; /* Align text box to the bottom */
     justify-content: center; /* Center horizontally */
-    padding-bottom: 20px; /* Add some space from the bottom */
+    padding-bottom: 0px; /* Add some space from the bottom */
   }
 }
 
 .exit-text-box {
   background-color: white;
+  color: black; 
   padding: 20px;
   border-radius: 10px;
   font-size: 20px;
